--- a/config.yaml
+++ b/config.yaml
@@ -8,11 +8,11 @@
 # Should be .fq.gz or .fastq.gz files. #
 ########################################
 
-input_dir: /media/root/working_disk/testing_data_two #testing_data #/media/root/working_disk/data_RNA_seqone_sample/
+input_dir: /media/root/ngs_nas3/testing_data_poly_A/ #testing_data #/media/root/working_disk/data_RNA_seqone_sample/
 tmp_dir: tmp
 output_dir: output
 scratch: tmp
-firts_strand_stem: UHRR_100_Collibri_A_L001
+firts_strand_stem: Z4-Leg-2_S8
 
 ###################
 # Fastqc options. #
