--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@
 # Should be .fq.gz or .fastq.gz files. #
 ########################################
 
-input_dir: /media/root/working_disk/data_RNA_seqone_sample/ #/media/root/ngs_nas3/testing_data_poly_A/ #testing_data #/media/root/working_disk/data_RNA_seqone_sample/
+input_dir: /media/root/ngs_nas3/testing_data_poly_A #/media/root/working_disk/data_RNA_seqone_sample/ #/media/root/ngs_nas3/testing_data_poly_A/ #testing_data #/media/root/working_disk/data_RNA_seqone_sample/
 tmp_dir: tmp
 output_dir: output
 scratch: tmp
