--- a/envs/3EndD.yaml
+++ b/envs/3EndD.yaml
@@ -1,141 +1,15 @@
 channels:
-  - r
+  - conda-forge
   - anaconda
   - bioconda
-  - conda-forge
   - defaults
 dependencies:
-  - aiohttp=3.3.2=py35h14c3975_0
-  - appdirs=1.4.3=py35h28b3542_0
-  - asn1crypto=0.24.0=py35_0
-  - async-timeout=3.0.0=py35_0
-  - attrs=18.1.0=py35_0
-  - bcrypt=3.1.4=py35h14c3975_0
-  - boto3=1.2.3=py35_0
-  - ca-certificates=2018.03.07=0
-  - cairo=1.14.12=h8948797_3
-  - certifi=2018.8.24=py35_1
-  - cffi=1.11.5=py35he75722e_1
-  - chardet=3.0.4=py35_1
-  - configargparse=0.13.0=py35_0
-  - cryptography=2.3.1=py35hc365091_0
-  - curl=7.61.0=h84994c4_0
-  - datrie=0.7.1=py35_0
-  - decorator=4.3.0=py35_0
-  - docutils=0.14=py35hd11081d_0
-  - dropbox=9.0.0=py35_0
-  - expat=2.2.6=he6710b0_0
-  - fftw=3.3.8=h14c3975_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - fribidi=1.0.4=h14c3975_0
-  - glib=2.56.2=hd408876_0
-  - gmp=6.1.2=h6c8ec71_1
-  - graphite2=1.3.12=h23475e2_2
-  - graphviz=2.40.1=h21bd128_2
-  - harfbuzz=1.8.8=hffaf4a1_0
-  - icu=58.2=h9c2bf20_1
-  - idna=2.7=py35_0
-  - idna_ssl=1.1.0=py35_0
-  - intel-openmp=2018.0.3=0
-  - jinja2=2.10=py35_0
-  - jmespath=0.9.3=py35_0
-  - jpeg=9b=h024ee3a_2
-  - jsonschema=2.6.0=py35h4395190_0
-  - libcurl=7.61.0=h1ad7b7a_0
-  - libedit=3.1.20170329=h6b74fdf_2
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran=3.0.0=1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libopenblas=0.2.20=h9ac9557_7
-  - libpng=1.6.34=hb9fc6fc_0
-  - libprotobuf=3.6.0=hdbcaa40_0
-  - libsodium=1.0.16=h1bed415_0
-  - libssh2=1.8.0=h9cfc8f7_4
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.9=he85c1e1_2
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=h26e45fe_1
-  - markupsafe=1.0=py35h14c3975_1
-  - metis=5.1.0=hf484d3e_4
-  - mkl=2018.0.3=1
-  - mkl_fft=1.0.1=py35h3010b51_0
-  - mkl_random=1.0.1=py35h629b387_0
-  - mpfr=3.1.5=h11a74b3_2
-  - multidict=4.3.1=py35h14c3975_0
-  - ncurses=6.1=hf484d3e_0
-  - networkx=2.1=py35_0
-  - numpy-base=1.14.3=py35h0ea5e3f_1
-  - openblas=0.2.20=4
-  - openblas-devel=0.2.20=7
-  - openjdk=8.0.121=1
-  - openssl=1.0.2p=h14c3975_0
-  - pandas=0.23.4=py35h04863e7_0
-  - pango=1.42.4=h049681c_0
-  - paramiko=2.4.1=py35_0
-  - pcre=8.42=h439df22_0
-  - pip=10.0.1=py35_0
-  - pixman=0.34.0=hceecf20_3
-  - protobuf=3.6.0=py35hf484d3e_0
-  - psutil=5.4.7=py35h14c3975_0
-  - pyasn1=0.4.4=py35h28b3542_0
-  - pycparser=2.18=py35_1
-  - pynacl=1.2.1=py35h14c3975_0
-  - pyopenssl=18.0.0=py35_0
-  - pysocks=1.6.8=py35_0
-  - python=3.5.6=hc3d631a_0
-  - python-dateutil=2.7.3=py35_0
-  - pytz=2018.5=py35_0
-  - pyyaml=3.13=py35h14c3975_0
-  - readline=7.0=h7b6447c_5
-  - requests=2.19.1=py35_0
-  - setuptools=40.2.0=py35_0
-  - six=1.11.0=py35_1
-  - sqlite=3.24.0=h84994c4_0
-  - tbb=2018.0.5=h6bb024c_0
-  - tk=8.6.8=hbc83047_0
-  - urllib3=1.23=py35_0
-  - wheel=0.31.1=py35_0
-  - wrapt=1.10.11=py35h14c3975_2
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - yarl=1.2.6=py35h14c3975_0
-  - zlib=1.2.11=ha838bed_2
-  - bbmap=38.22=h470a237_0
-  - botocore=1.3.6=py35_0
-  - filechunkio=1.6=py35_0
-  - ftputil=3.2=py35_0
-  - pyasn1-modules=0.0.5=py35_0
-  - pygraphviz=1.3.1=py35_0
-  - pysftp=0.2.9=py35_0
-  - rsa=3.1.4=py35_0
+  - python=3.6.3
+  - bbmap=38.06
   - sambamba=0.6.6=2
-  - seqkit=0.8.1=2
-  - snakemake=5.2.2=py35_1
-  - snakemake-minimal=5.2.2=py35_1
+  - seqkit=0.8.1
+  - snakemake=5.2.2=py36_1
   - star=2.6.1a=1
-  - aioeasywebdav=2.2.0=py35_0
-  - arpack=3.6.2=blas_openblash1f444ea_0
-  - blas=1.1=openblas
-  - cachetools=2.1.0=py_0
-  - google-api-core=0.1.4=py_0
-  - google-auth=1.2.1=py_0
-  - google-cloud-core=0.28.1=py_0
-  - google-cloud-storage=1.11.0=py_0
-  - google-resumable-media=0.3.1=py_0
-  - googleapis-common-protos=1.5.3=py_1
   - julia=0.6.1=blas_openblas_202
-  - libgit2=0.27.4=h5ee2e84_0
-  - numpy=1.15.1=py35_blas_openblashd3ea46f_0
-  - openlibm=0.5.4=0
-  - openspecfun=0.5.3=h26a2512_0
-  - pcre2=10.23=2
-  - prettytable=0.7.2=py_2
-  - python-irodsclient=0.7.0=py_0
-  - ratelimiter=1.2.0=py35_0
-  - suitesparse=4.5.6=blas_openblash55dcaef_201
-  - xmlrunner=1.7.7=py_0
   - fastqc=0.11.7
   - multiqc=1.6a0
