--- a/config-sample-data.yaml
+++ b/config-sample-data.yaml
@@ -8,7 +8,7 @@
 # Should be .fq.gz or .fastq.gz files. #
 ########################################
 
-INPUT-DIR: /media/root/ocean/Databases/3EndD_testing_files/fastq #/media/root/ngs_nas3/testing_data_poly_A/
+INPUT-DIR: /media/root/ocean/Databases/TestData/3EndD_testing_files/fastq #/media/root/ngs_nas3/testing_data_poly_A/
 TMP-DIR: tmp
 OUT-DIR: output
 SCRATCH: tmp
@@ -24,14 +24,14 @@ MACHINE:
 ##############
 # References #
 ##############
-REFERENCE: /media/root/ocean/Databases/3EndD_testing_files/reference/GRCh38.primary_assembly.chr21.fa
+REFERENCE: /media/root/ocean/Databases/TestData/3EndD_testing_files/reference/GRCh38.primary_assembly.chr21.fa
 polyA_ref: datasets/bbmap/polyA.fa
 # TRANSCRIPTS: /media/root/ocean/Databases/3EndD_testing_files/reference/gencode.v28.transcripts.chr21.fa.gz
 # GFF3: /media/root/ocean/Databases/3EndD_testing_files/reference/gencode.v28.primary_assembly.annotation_chr21.gff3
 # GTF: /media/root/ocean/Databases/3EndD_testing_files/reference/gencode.v28.primary_assembly.annotation_chr21.gtf
-TRANSCRIPTS: /media/root/ocean/Databases/hg38/gencode.v28.transcripts.fa.gz
-GFF3: /media/root/ocean/Databases/hg38/gencode.v28.primary_assembly.annotation.gff3
-GTF: /media/root/ocean/Databases/hg38/gencode.v28.primary_assembly.annotation.gtf
+TRANSCRIPTS: /media/root/ocean/Databases/TestData/3EndD_testing_files/reference/gencode.v28.transcripts.chr21.fa.gz
+GFF3: /media/root/ocean/Databases/TestData/3EndD_testing_files/reference/gencode.v28.primary_assembly.annotation_chr21.gff3
+GTF: /media/root/ocean/Databases/TestData/3EndD_testing_files/reference/gencode.v28.primary_assembly.annotation_chr21.gtf
 ###################
 # Fastqc options. #
 ###################
