--- a/config.yaml
+++ b/config.yaml
@@ -4,13 +4,13 @@
 
 
 ########################################
-# Destination of FASTQ.GZ files.       #
+# Source of FASTQ.GZ files.       #
 # Should be .fq.gz or .fastq.gz files. #
 ########################################
 
-INPUT-DIR: test_files #/media/root/ngs_nas3/testing_data_poly_A/
-TMP-DIR: tmp
-OUT-DIR: output
+INPUT-DIR: datasets/small_dataset/small_fastqs
+TMP-DIR: tmp_small_dataset
+OUT-DIR: output_small_dataset
 SCRATCH: tmp
 
 #########################
@@ -24,11 +24,10 @@ MACHINE:
 ##############
 # References #
 ##############
-REFERENCE: /media/root/ocean/Databases/HUMAN/hg38/GRCh38.primary_assembly.genome.fa
-TRANSCRIPTS: /media/root/ocean/Databases/HUMAN/hg38/gencode.v28.transcripts.fa
-GFF3: /media/root/ocean/Databases/HUMAN/hg38/gencode.v28.primary_assembly.annotation.gff3
-GTF: /media/root/ocean/Databases/HUMAN/hg38/gencode.v28.primary_assembly.annotation.gtf
-
+REFERENCE: datasets/small_dataset/references/GRCh38.primary_assembly.chr21.fa
+TRANSCRIPTS:
+GFF3: datasets/small_dataset/references/gencode.v28.primary_assembly.annotation_chr21.gff3
+GTF: datasets/small_dataset/references/gencode.v28.primary_assembly.annotation_chr21.gtf
 ###################
 # Fastqc options. #
 ###################
