--- a/config-sample-data.yaml
+++ b/config-sample-data.yaml
@@ -8,7 +8,7 @@
 # Should be .fq.gz or .fastq.gz files. #
 ########################################
 
-INPUT-DIR: /media/root/ocean/Databases/3EndD_testing_files/fastq #/media/root/ngs_nas3/testing_data_poly_A/
+INPUT-DIR: /media/root/ocean/Databases/TestData/3EndD_testing_files/fastq_1000 #/media/root/ngs_nas3/testing_data_poly_A/
 TMP-DIR: tmp
 OUT-DIR: output
 SCRATCH: tmp
@@ -24,7 +24,7 @@ MACHINE:
 ##############
 # References #
 ##############
-REFERENCE: /media/root/ocean/Databases/3EndD_testing_files/reference/GRCh38.primary_assembly.chr21.fa
+REFERENCE: /media/root/ocean/Databases/TestData/3EndD_testing_files/reference/GRCh38.primary_assembly.chr21.fa
 polyA_ref: datasets/bbmap/polyA.fa
 # TRANSCRIPTS: /media/root/ocean/Databases/3EndD_testing_files/reference/gencode.v28.transcripts.chr21.fa.gz
 # GFF3: /media/root/ocean/Databases/3EndD_testing_files/reference/gencode.v28.primary_assembly.annotation_chr21.gff3
@@ -69,3 +69,10 @@ MAPPING:
         threads: 24
         chimSegmentMin: 20
         additional_params: ""
+
+####################
+# Annotation of TS #
+####################
+ANNOTATE-TS:
+    k: 5
+    additional_params: "--cluster" # ["--cluster --verbose"]
