Fix <configs>: tmp dir.
Former-commit-id: 65bee3fd9a9239d3fadebd31619f2d32d876d2db

--- a/config-sample-data.yaml
+++ b/config-sample-data.yaml
@@ -11,7 +11,7 @@
 INPUT-DIR: datasets/small_dataset/small_fastqs
 TMP-DIR: tmp_small_dataset
 OUT-DIR: output_small_dataset
-SCRATCH: tmp
+SCRATCH: tmp_small_dataset
 
 #########################
 # CPU and memory params #
