--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,3 +1,6 @@
+language: julia
+julia:
+  - 0.6.1
 install:
   - sudo apt-get update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -15,6 +18,6 @@ install:
 script:
   - source activate 3EndD
   - bash envs/build_julia_pkgs.sh
-  - julia PolyAAnalysis.jl/tests/runtests.jl 
+  - julia PolyAAnalysis.jl/tests/runtests.jl
 codecov: true
 coveralls: true
