--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,6 +1,8 @@
-language: julia
-julia:
-  - "0.6.1"
+language: python
+python:
+  # We don't actually use the Travis Python.
+  - "3.6"
+
 install:
   - sudo apt-get update
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -15,6 +17,7 @@ install:
   - conda config --add channels anaconda
   - conda config --add channels defaults
   - conda env create -f envs/3EndD.yaml -n 3EndD
+
 script:
   - source activate 3EndD
   - bash envs/build_julia_pkgs.sh
