Add <.travis.yml config.yaml datasets/small_dataset/references/GRCh38.primary_assembly.chr21_reduced.fa  datasets/small_dataset/references/gencode.v28.primary_assembly.annotation_chr21_reduced.gff3 datasets/small_dataset/references/gencode.v28.primary_assembly.annotation_chr21_reduced.gtf>: for travis tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ script:
  - source activate 3EndD;
  - bash envs/build_julia_pkgs.sh;
  - julia PolyAAnalysis.jl/tests/runtests.jl;
+ - snakemake --use-conda -j 2 -p
