--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ script:
  - source activate 3EndD;
  - bash envs/build_julia_pkgs.sh;
  - julia PolyAAnalysis.jl/tests/runtests.jl;
- - snakemake --use-conda -j 2 -p
+ - travis_wait 40 snakemake --use-conda -j 2 -p
