--- a/config.yaml
+++ b/config.yaml
@@ -77,4 +77,6 @@ ANNOTATE-TS:
     threads: 1
     k: 10
     m: 1
+    mappingquality: 0              # [0] Only reads with greater than this mapping value will pass.
+    strandness: "+"                  # [+] If R1 read is the same as a gene sequence: +; If R2 read is the same as a gene sequence: -;
     additional_params: "--cluster" # ["--cluster --verbose"]
