Add slimfastq decompression. Add strandedness options for separate samples.

--- a/config.yaml
+++ b/config.yaml
@@ -78,5 +78,6 @@ ANNOTATE-TS:
     k: 10
     m: 1
     mappingquality: 0              # [0] Only reads with greater than this mapping value will pass.
-    strandness: "+"                  # [+] If R1 read is the same as a gene sequence: +; If R2 read is the same as a gene sequence: -;
+    strandedness:                    # [+] If R1 read is the same as a gene sequence: +; If R2 read is the same as a gene sequence: -;
+        HBR_100_Collibri_chr21small_A: "+"
     additional_params: "--cluster" # ["--cluster --verbose"]
